--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.6.9",
     "nodemon": "^2.0.3",
     "socket.io": "^2.3.0",
-    "uuid": "^8.0.0"
+    "uuid": "^8.0.0",
+    "web-push": "^3.4.4"
   }
 }
